@@ -263,6 +263,9 @@ public:
   setAvailableMemoryProportion(const std::vector<poptorch::TensorId> &inputs,
                                float availableMemoryProportion);
 
+  void setMatMulSerialization(poptorch::TensorId matmul, const char *mode,
+                              std::uint64_t factor,
+                              std::uint64_t keep_precision);
   void setActiveIpu(std::uint64_t stage_id, std::int64_t phase_id,
                     std::int64_t ipu_id);
 
