@@ -9,3 +9,5 @@ New features:
     Using a mix of float 16 and float 32 inputs is now supported. Please see
     the documentation for cases in which a model might use different types
     compared to when run natively with PyTorch.
+- Added support for serialized matrix multiplications 
+(poptorch.serializedMatMul)
